--- a/Firebase_Chat/app/src/main/AndroidManifest.xml
+++ b/Firebase_Chat/app/src/main/AndroidManifest.xml
@@ -16,15 +16,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SignInUp">
+        <activity
+            android:name=".SignUp"
+            android:label="Create Account"></activity>
+        <activity
+            android:name=".DiscussionActivity"
+            android:label="Welcome" />
+        <activity android:name=".MainActivity">
+        </activity>
+        <activity
+            android:name=".SignIn"
+            android:label="Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DiscussionActivity" />
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".temp"></activity>
     </application>
 
 </manifest>
